--- a/styles.scss
+++ b/styles.scss
@@ -100,7 +100,7 @@
           label {
             display: flex;
             flex-direction: column;
-            width: 50%;
+            flex: 1;
 
             input {
               border-radius: 5px;
@@ -131,6 +131,29 @@
             }
           }
         }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 650px) {
+    .container {
+      flex-flow: column;
+      height: auto;
+      text-align: center;
+
+      .picture {
+        background-position: bottom;
+        background-size: 100vw;
+        height: 15vh;
+
+        .logo {
+          width: 100%;
+          position: static;
+        }
+      }
+
+      form {
+        flex-flow: column nowrap;
       }
     }
   }
