--- a/styles.css
+++ b/styles.css
@@ -137,9 +137,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
 }
 
 :root .container .login-side .content form label input {
@@ -193,6 +190,12 @@
     -webkit-box-direction: normal;
         -ms-flex-flow: column nowrap;
             flex-flow: column nowrap;
+  }
+}
+
+@media only screen and (min-width: 650px) {
+  :root label {
+    width: 50%;
   }
 }
 /*# sourceMappingURL=styles.css.map */
