--- a/styles.scss
+++ b/styles.scss
@@ -100,7 +100,6 @@
           label {
             display: flex;
             flex-direction: column;
-            flex: 1;
 
             input {
               border-radius: 5px;
@@ -155,6 +154,12 @@
       form {
         flex-flow: column nowrap;
       }
+    }
+  }
+
+  @media only screen and (min-width: 650px) {
+    label {
+      width: 50%;
     }
   }
 }
