--- a/styles.scss
+++ b/styles.scss
@@ -76,8 +76,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        position: relative;
-        top: 10vh;
+        margin-top: 50px;
         padding: 0 10px 0 20px;
 
         .info {
@@ -135,6 +134,11 @@
   }
 
   @media only screen and (max-width: 650px) {
+    body {
+      overflow: scroll;
+      height: auto;
+    }
+
     .container {
       flex-flow: column;
       height: auto;
