--- a/styles.css
+++ b/styles.css
@@ -102,8 +102,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
-  top: 10vh;
+  margin-top: 50px;
   padding: 0 10px 0 20px;
 }
 
@@ -168,6 +167,10 @@
 }
 
 @media only screen and (max-width: 650px) {
+  :root body {
+    overflow: scroll;
+    height: auto;
+  }
   :root .container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
