--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
+  position: relative;
 }
 
 :root .container .picture .logo {
@@ -63,12 +64,23 @@
   height: 15vh;
 }
 
-:root .container .picture .footer {
-  color: white;
-  font-size: 0.7rem;
+:root .container .picture .author {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 0.5rem;
   text-align: center;
   vertical-align: bottom;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
+  position: absolute;
+  padding-top: 10px;
+  bottom: 10px;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+:root .container .picture .author a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 :root .container .login-side {
